2002-06-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSURL.h: Added a couple of ivars and removed
	non-standard methods.
	* Source/NSURL.m: Rewrite everything apart from the code dealing
	with NSURLHandle objects (and change some of that) to conform to
	the documentation (I hope) and to try to match behavior with that
	of MacOS-X.

2002-06-04  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSByteOrder.h: Hack for bug in gcc 3.1
	* Source/externs.m (_gcc3_1_hack): Idem. (modified patch from 
	benhur@inf.ufsm.br).

	* Source/GSFFIInvocation.m (gs_objc_msg_forward): Alloc closure
	with fastMallocBuffer.

	* Documentation/coding-standards.texi: Update.

2002-06-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSObject.h: Removed  ([_dealloc]),
	([-deallocNotificationsActive]), ([setDeallocNotificationsActive:])
	* Source/NSObject.m: Removed  ([_dealloc]),
	([-deallocNotificationsActive]), ([setDeallocNotificationsActive:])
	as these methods are no longer necessary now that the dealloc method
	itsself is able to refrain from performing deallocation if if wishes
	(the retain count mechanism can no longer reach a zero retain count).

2002-06-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Change NSDecrementExtraRefCountWasZero() to
	refrain from decrementing when the count is zero.  Documented
	the retain/release/retainCount methods (and others).
	* Headers/Foundation/NSObject.h: Documented extra ref count functions.

2002-05-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Change order of zombie initialisation for
	darwin port.

2002-05-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSMime.h: Make set... methods return void.
	* Source//GSMime.m: Make set... methods return void.  Also fix
	parsing to use different 'specials' for HTTP and MIME
	* Headers/gnustep/base/GSIMap.h:
	* Headers/gnustep/base/NSHashTable.h:
	* Headers/gnustep/base/NSMapTable.h:
	* Source/GSArray.m: